Override bootstrap media query to fix text alignment in app description

--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -1,3 +1,9 @@
+@media (min-width: 1200px) {
+    .container {
+        max-width: 1400px;
+    }
+}
+
 #map {
     width:100vw;
     height:60vw;
